"Updated master bibliography file; collalated references from all previous drafts which were missing from the current .bib file"

--- a/nate-am-review/APR.bib
+++ b/nate-am-review/APR.bib
@@ -1,12 +1,118 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Nathan Scott David Forrest Everrett Johnson at 2019-02-08 14:16:41 -0700 
+%% Created for Nathan Scott David Forrest Everrett Johnson at 2019-02-15 10:37:34 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Bennett2012,
+	Abstract = {We use a first-principles rational-design approach to identify a previously unrecognized class of ferroelectric materials in the P63mc LiGaGe structure type. We calculate structural parameters, polarization, and ferroelectric well depths both for reported and as-yet hypothetical representatives of this class. Our results provide guidance for the experimental realization and further investigation of high-performance materials suitable for practical applications.},
+	Arxivid = {arXiv:1206.4732v1},
+	Author = {Bennett, Joseph W. and Garrity, Kevin F. and Rabe, Karin M. and Vanderbilt, David},
+	Date-Added = {2019-02-15 10:37:12 -0700},
+	Date-Modified = {2019-02-15 10:37:12 -0700},
+	Doi = {10.1103/PhysRevLett.109.167602},
+	Eprint = {arXiv:1206.4732v1},
+	File = {:Users/njohnson/Documents/Articles/Applied Physics Review/Bennet{\_}HexagonalABCSemiconductors as Ferroelectrics.pdf:pdf},
+	Issn = {00319007},
+	Journal = {Physical Review Letters},
+	Number = {16},
+	Pages = {1--5},
+	Pmid = {23215130},
+	Title = {{Hexagonal ABC semiconductors as ferroelectrics}},
+	Volume = {109},
+	Year = {2012},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1103/PhysRevLett.109.167602}}
+
+@article{Wang2011,
+	Abstract = {Several thousand compounds from the Inorganic Crystal Structure Database have been considered as nanograined, sintered-powder thermoelectrics with the high-throughput ab-initio AFLOW framework. Regression analysis unveils that the power factor is positively correlated with both the electronic band gap and the carrier effective mass, and that the probability of having large thermoelectric power factors increases with the increasing number of atoms per primitive cell. Avenues for further investigation are revealed by this work. These avenues include the role of experimental and theoretical databases in the development of novel materials.},
+	Author = {Wang, Shidong and Wang, Zhao and Setyawan, Wahyu and Mingo, Natalio and Curtarolo, Stefano},
+	Date-Added = {2019-02-15 10:36:25 -0700},
+	Date-Modified = {2019-02-15 10:36:25 -0700},
+	Doi = {10.1103/PhysRevX.1.021012},
+	File = {:Users/njohnson/Documents/Articles/Applied Physics Review/Wang{\_}Assessing the Thermoelectric Properties of Sintered Compoundsvia High-ThroughputAb-InitioCalculations.pdf:pdf},
+	Issn = {21603308},
+	Journal = {Physical Review X},
+	Keywords = {Condensed Matter Physics,Energy Research,Materials Science},
+	Number = {2},
+	Pages = {1--8},
+	Title = {{Assessing the Thermoelectric Properties of Sintered Compounds via High-Throughput Ab-Initio Calculations}},
+	Volume = {1},
+	Year = {2011},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1103/PhysRevX.1.021012}}
+
+@article{Hautier2013,
+	Abstract = {Finding new polyanionic Li-ion battery cathodes with higher capacities than LiFePO4 is currently a major target of battery research. One approach towards this goal is to develop materials capable of exchanging more than one lithium per transition metal. However, constraints on operating voltage due to organic electrolyte stability as well as cathode structural stability have made this target difficult to reach. More specifically, it is very challenging to develop a phosphate-based cathode in which a single element provides +2 to +4 redox activity in a reasonable voltage window: either the +2/+3 couple is too low (e.g., V) or the +3/+4 couple is too high in voltage (e.g., Fe). This makes several appealing structural frameworks such as tavorites difficult to use as practical two-electron systems. Here, we propose a voltage design strategy based on the mixing of different transition metals in crystal structures known to be able to accommodate lithium in insertion and delithiation. By mixing a metal active on the +2/+3 couple (e.g., Fe) with an element active on the +3/+5 or +3/+6 couples (e.g., V or Mo), we show that high capacity multi-electron cathodes can be designed in an adequate voltage window. We illustrate our mixing strategy on LiMP2O7 pyrophosphates as well as LiMPO4(OH) and LiM(PO4)F tavorites, and we use density functional theory computations to evaluate the theoretical capacity, voltage profile and stability of the compounds proposed by our design rules. From this analysis, we identify several new compounds of potential interest as cathode materials.},
+	Author = {Hautier, Geoffroy and Jain, Anubhav and Mueller, Tim and Moore, Charles and Ong, Shyue Ping and Ceder, Gerbrand},
+	Date-Added = {2019-02-15 10:36:10 -0700},
+	Date-Modified = {2019-02-15 10:36:10 -0700},
+	Doi = {10.1021/cm400199j},
+	File = {:Users/njohnson/Documents/Articles/Applied Physics Review/Hautier{\_}Designing Multielectron Lithium-Ion Phosphate Cathodes by MixingTransition Metals.pdf:pdf},
+	Isbn = {0897-4756},
+	Issn = {08974756},
+	Journal = {Chemistry of Materials},
+	Keywords = {DFT,Li-ion battery,ab initio,cathode,multielectron cathode,phosphates,pyrophosphate,tavorite},
+	Number = {10},
+	Pages = {2064--2074},
+	Title = {{Designing multielectron lithium-ion phosphate cathodes by mixing transition Metals}},
+	Volume = {25},
+	Year = {2013},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1021/cm400199j}}
+
+@article{Mitzi2001,
+	Author = {David B. Mitzi},
+	Date-Added = {2019-02-15 10:34:44 -0700},
+	Date-Modified = {2019-02-15 10:34:44 -0700},
+	Journal = {Chemical Materials},
+	Pages = {3283-3298},
+	Title = {Thin-Film Deposition of Organic-Inorganic Hybrid Materials},
+	Volume = {13},
+	Year = {2001}}
+
+@article{Mercey1999,
+	Author = {Bernard Mercey and Paul A. Salvador and Wilfrid Prellier and Trong-Duc Doan and Jerome Wolfman and Jean-Francois Hamet and Maryvonne Hervieu and Bernard Raveau},
+	Date-Added = {2019-02-15 10:34:32 -0700},
+	Date-Modified = {2019-02-15 10:34:32 -0700},
+	Journal = {Journal of Materials Chemistry},
+	Pages = {233-242},
+	Title = {Thin film deposition: a novel synthetic route to new materials},
+	Volume = {9},
+	Year = {1999}}
+
+@article{Hampden-Smith1995,
+	Author = {Mark J. Hampden-Smith and Tovio T. Kodas},
+	Date-Added = {2019-02-15 10:34:12 -0700},
+	Date-Modified = {2019-02-15 10:34:12 -0700},
+	Journal = {Chemical Vapor Deposition},
+	Title = {Chemical Vapor Deposition of Metals: Part 1. An overview of CVD Processes},
+	Volume = {1},
+	Year = {1995}}
+
+@article{Boley2015,
+	Author = {C.D. Boley and S.A. Khairallah and A.M. Rubenchik},
+	Date-Added = {2019-02-11 13:33:47 -0700},
+	Date-Modified = {2019-02-11 13:34:56 -0700},
+	Journal = {Applied Optics},
+	Month = {March},
+	Number = {9},
+	Pages = {2477-2483},
+	Title = {Calculation of laser absorption by metal powders in additive manufacturing},
+	Volume = {54},
+	Year = {2015}}
+
+@article{Zhou2009,
+	Author = {Jianhua Zhou and Yuwen Zhang and J.K. Chen},
+	Date-Added = {2019-02-11 13:30:25 -0700},
+	Date-Modified = {2019-02-11 13:30:25 -0700},
+	Journal = {Journal of Manufacturing Science and Engineering},
+	Month = {June},
+	Pages = {1-8},
+	Title = {Numerical Simulation of random Packing of Spherical Particles for Powder-Based Additive Manufacturing},
+	Volume = {131},
+	Year = {2009}}
 
 @article{Krizhevsky,
 	Date-Added = {2019-02-07 15:04:10 -0700},
@@ -24,7 +130,7 @@
 	Year = {2002}}
 
 @article{Jin2008,
-	Author = {Yaochu Jin and Bernhard Sendhoff },
+	Author = {Yaochu Jin and Bernhard Sendhoff},
 	Date-Added = {2019-02-06 09:54:46 -0700},
 	Date-Modified = {2019-02-06 09:55:57 -0700},
 	Journal = {IEEE Transactions of Systems, Man, and Cybernetics - Parc C: Applications and Reviews},
