"Adding more citations to the master .bib file"

--- a/nate-am-review/APR.bib
+++ b/nate-am-review/APR.bib
@@ -1,12 +1,24 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Nathan Scott David Forrest Everrett Johnson at 2019-02-15 10:37:34 -0700 
+%% Created for Nathan Scott David Forrest Everrett Johnson at 2019-02-15 10:39:55 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Kang2006,
+	Author = {Kisuk Kang and Ying Shirley Meng and Julien Breger and Clare P. Grey and Gerbrand Ceder},
+	Date-Added = {2019-02-15 10:39:53 -0700},
+	Date-Modified = {2019-02-15 10:39:53 -0700},
+	File = {:Users/njohnson/Documents/Articles/Applied Physics Review/Kang{\_}Electrodes with High Powerand High Capacity forRechargeable Lithium Batteries.pdf:pdf},
+	Journal = {Science},
+	Number = {February},
+	Pages = {977--980},
+	Title = {Electrodes with High Power and High Capacity for Rechargeable Lithium Batteries},
+	Volume = {311},
+	Year = {2006}}
 
 @article{Bennett2012,
 	Abstract = {We use a first-principles rational-design approach to identify a previously unrecognized class of ferroelectric materials in the P63mc LiGaGe structure type. We calculate structural parameters, polarization, and ferroelectric well depths both for reported and as-yet hypothetical representatives of this class. Our results provide guidance for the experimental realization and further investigation of high-performance materials suitable for practical applications.},
